--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                   <h1 class="display-3">Train Scheduler!</h1>
-                  <p class="lead">CHOO CHOO! CHEE CHEE!  Hi Lily!</p>
+                  <p class="lead">CHOO CHOO! CHEE CHEE!  </p>
                 </div>
               </div>
     <div class="container">
